// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Basic Table 1`] = `
<div
  className="sc-bZkfAO dJBbcc"
  data-element="tableWrapper"
>
  <table
    className="sc-kLLXSd eXWyzl"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-jdAMXn fcA-dUh"
    >
      <tr>
        <td
          className="sc-himrzO sc-gXmSlM fkWGJm leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM kgJha-d leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Bigger Spacings 1`] = `
<div
  className="sc-bZkfAO dJBbcc"
  data-element="tableWrapper"
>
  <table
    className="sc-kLLXSd eXWyzl"
    data-element="table"
  >
    <caption>
      <div
        className="sc-bZnhIo jzMmPY"
      >
        Assets to deposit
      </div>
    </caption>
    <thead
      className="sc-jdAMXn fcA-dUh"
    >
      <tr>
        <td
          className="sc-himrzO sc-gXmSlM fkWGJm leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM kgJha-d leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Empty Data Table 1`] = `
<div
  className="sc-bZkfAO cAxotH"
  data-element="tableWrapper"
>
  <table
    className="sc-kLLXSd eXWyzl"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-jdAMXn fcA-dUh"
    />
    <tbody>
      <tr>
        <td
          className="sc-himrzO bUGxJb"
          colSpan={5}
        >
          <p
            className="sc-fEOsli kVdAuo c-text--body-5"
          >
            There is no data loaded.
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Expandable table 1`] = `
<div
  className="sc-bZkfAO dJBbcc"
  data-element="tableWrapper"
>
  <table
    className="sc-kLLXSd eXWyzl"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-jdAMXn fcA-dUh"
    >
      <tr>
        <td
          className="sc-himrzO sc-gXmSlM fkWGJm leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM kgJha-d leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Borrow APY
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM jzqDDn leESXv"
          width={100}
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Action
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ glcfhk jriGrI"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ glcfhk jriGrI"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ glcfhk jriGrI"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <button
            appearance="primary"
            className="sc-hKMtZM sc-eCYdqJ glcfhk jriGrI"
            data-element="button"
            onClick={[Function]}
            size="small"
            variant="thin"
          >
            Expand
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Small Spacing 1`] = `
<div
  className="sc-bZkfAO dJBbcc"
  data-element="tableWrapper"
>
  <table
    className="sc-kLLXSd eXWyzl"
    data-element="table"
  >
    <caption>
      <div
        className="sc-iTONeN knoCVT"
      >
        <div>
          Your deposit
        </div>
      </div>
    </caption>
    <thead
      className="sc-jdAMXn fcA-dUh"
    >
      <tr>
        <td
          className="sc-himrzO sc-gXmSlM fkWGJm cydyBC"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC cydyBC"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC cydyBC"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC cydyBC"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM kgJha-d cydyBC"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={false}
      >
        <td
          className="sc-himrzO fkWGJm"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO kgJha-d"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={false}
      >
        <td
          className="sc-himrzO fkWGJm"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO kgJha-d"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={false}
      >
        <td
          className="sc-himrzO fkWGJm"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO kgJha-d"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={false}
      >
        <td
          className="sc-himrzO fkWGJm"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO bJjlxC"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO kgJha-d"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table With Footer 1`] = `
<div
  className="sc-bZkfAO dJBbcc"
  data-element="tableWrapper"
>
  <table
    className="sc-kLLXSd eXWyzl"
    data-element="table"
  >
    <caption>
      
      
    </caption>
    <thead
      className="sc-jdAMXn fcA-dUh"
    >
      <tr>
        <td
          className="sc-himrzO sc-gXmSlM fkWGJm leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Assets
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total value deposited
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Total borrowed
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM bJjlxC leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Deposit APY
          </div>
        </td>
        <td
          className="sc-himrzO sc-gXmSlM kgJha-d leESXv"
        >
          <div
            className="sc-ikZpkk sc-jIZahH cMqjgQ kRYfFI"
          >
            Borrow APY
          </div>
        </td>
      </tr>
    </thead>
    <tbody>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            ETH
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            DAI
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            POLKA
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
      <tr
        isTitleAString={true}
      >
        <td
          className="sc-himrzO kysAtL"
        >
          <div
            className="sc-hTtwUo hRSDHm"
          >
            BTC
          </div>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            1.250.000$
          </span>
        </td>
        <td
          className="sc-himrzO fZpOqX"
        >
          <span>
            3.5%
          </span>
        </td>
        <td
          className="sc-himrzO hrZPNE"
        >
          <span>
            7.5%
          </span>
        </td>
      </tr>
    </tbody>
    <tfoot
      className="sc-iAvgwm cyIQxm c-table__footer"
    >
      <tr>
        <td
          className="sc-himrzO bJjlxC"
          colSpan={5}
        >
          <div>
            Footer component
          </div>
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
